app/v3/istio-100-percent.yaml
apiVersion: v1
kind: List
items:
- kind: VirtualService
  apiVersion: networking.istio.io/v1alpha3
  metadata:
    name: hello-vs
  spec:
    hosts:
    - "*"
    gateways:
    - hello-gateway
    http:
      - match:
        - uri:
            prefix: "/"
        route:
        - destination:
            host: hello-world
            subset: v2
          weight: 100
- kind: DestinationRule
  apiVersion: networking.istio.io/v1alpha3
  metadata:
    name: hello-world
  spec:
    host: hello-world
    subsets:
    - name: v3
      labels:
        version: v3
