app/v3/istio-try-50-percent.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: hello-vs
spec:
  hosts:
  - "*"
  gateways:
  - hello-gateway
  http:
    - match:
      - uri:
          prefix: "/"
      route:
      - destination:
          host: hello-world
          subset: v1
        weight: 50
      - destination:
          host: hello-world
          subset: v3
        weight: 50
